--- a/socialnetwork/templates/base.html
+++ b/socialnetwork/templates/base.html
@@ -10,7 +10,7 @@
     <link
             rel="stylesheet"
             href="{% static 'bootstrap.min.css' %}"
-            integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+            {% comment %} integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" {% endcomment %}
             crossorigin="anonymous"
     />
     <link
@@ -23,7 +23,7 @@
             href="{% static 'fa/css/all.min.css' %}"
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
-            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            {% comment %} integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" {% endcomment %}
     />
     <link rel="stylesheet" href="{% static 'main.css' %}"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
