--- a/famesocialnetwork/templates/index.html
+++ b/famesocialnetwork/templates/index.html
@@ -21,6 +21,10 @@
         <li>
             <a href="/fame/api/expertise_areas">Expertise Areas</a>
         </li>
+
+        <li class="list-group-item">
+            <a href="/sn/html/bullshitters" class="btn btn-primary">View Bullshitters</a>
+        </li>
     </ul>
     <h3>HTML Views</h3>
     <ul>
